compiler/parser.output
Grammar

    0 $accept: program $end

    1 program: array_decls stmt_sequence

    2 array_decls: ε
    3            | array_decls array_decl

    4 array_decl: ARRAY ID dims SEMI

    5 dims: dims LBRACKET NUM RBRACKET
    6     | LBRACKET NUM RBRACKET

    7 stmt_sequence: stmt_sequence SEMI statement
    8              | statement

    9 statement: if_stmt
   10          | repeat_stmt
   11          | assign_stmt
   12          | read_stmt
   13          | write_stmt

   14 if_stmt: IF exp THEN stmt_sequence END
   15        | IF exp THEN stmt_sequence ELSE stmt_sequence END

   16 repeat_stmt: REPEAT stmt_sequence UNTIL exp

   17 assign_stmt: var ASSIGN exp

   18 read_stmt: READ var

   19 write_stmt: WRITE exp

   20 exp: simple_exp RELOP simple_exp
   21    | simple_exp

   22 simple_exp: simple_exp PLUS term
   23           | simple_exp MINUS term
   24           | term

   25 term: term TIMES factor
   26     | term OVER factor
   27     | factor

   28 factor: LPAREN exp RPAREN
   29       | NUM
   30       | var

   31 var: ID var_dims

   32 var_dims: ε
   33         | var_dims LBRACKET exp RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ARRAY (258) 4
    ID (259) 4 31
    SEMI (260) 4 7
    LBRACKET (261) 5 6 33
    NUM (262) 5 6 29
    RBRACKET (263) 5 6 33
    IF (264) 14 15
    THEN (265) 14 15
    END (266) 14 15
    ELSE (267) 15
    REPEAT (268) 16
    UNTIL (269) 16
    ASSIGN (270) 17
    READ (271) 18
    WRITE (272) 19
    RELOP (273) 20
    PLUS (274) 22
    MINUS (275) 23
    TIMES (276) 25
    OVER (277) 26
    LPAREN (278) 28
    RPAREN (279) 28


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1
        on right: 0
    array_decls (27)
        on left: 2 3
        on right: 1 3
    array_decl (28)
        on left: 4
        on right: 3
    dims (29)
        on left: 5 6
        on right: 4 5
    stmt_sequence (30)
        on left: 7 8
        on right: 1 7 14 15 16
    statement (31)
        on left: 9 10 11 12 13
        on right: 7 8
    if_stmt (32)
        on left: 14 15
        on right: 9
    repeat_stmt (33)
        on left: 16
        on right: 10
    assign_stmt (34)
        on left: 17
        on right: 11
    read_stmt (35)
        on left: 18
        on right: 12
    write_stmt (36)
        on left: 19
        on right: 13
    exp (37)
        on left: 20 21
        on right: 14 15 16 17 19 28 33
    simple_exp (38)
        on left: 22 23 24
        on right: 20 21 22 23
    term (39)
        on left: 25 26 27
        on right: 22 23 24 25 26
    factor (40)
        on left: 28 29 30
        on right: 25 26 27
    var (41)
        on left: 31
        on right: 17 18 30
    var_dims (42)
        on left: 32 33
        on right: 31 33


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (array_decls)

    program      go to state 1
    array_decls  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: array_decls • stmt_sequence
    3 array_decls: array_decls • array_decl

    ARRAY   shift, and go to state 4
    ID      shift, and go to state 5
    IF      shift, and go to state 6
    REPEAT  shift, and go to state 7
    READ    shift, and go to state 8
    WRITE   shift, and go to state 9

    array_decl     go to state 10
    stmt_sequence  go to state 11
    statement      go to state 12
    if_stmt        go to state 13
    repeat_stmt    go to state 14
    assign_stmt    go to state 15
    read_stmt      go to state 16
    write_stmt     go to state 17
    var            go to state 18


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 array_decl: ARRAY • ID dims SEMI

    ID  shift, and go to state 19


State 5

   31 var: ID • var_dims

    $default  reduce using rule 32 (var_dims)

    var_dims  go to state 20


State 6

   14 if_stmt: IF • exp THEN stmt_sequence END
   15        | IF • exp THEN stmt_sequence ELSE stmt_sequence END

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 23
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 7

   16 repeat_stmt: REPEAT • stmt_sequence UNTIL exp

    ID      shift, and go to state 5
    IF      shift, and go to state 6
    REPEAT  shift, and go to state 7
    READ    shift, and go to state 8
    WRITE   shift, and go to state 9

    stmt_sequence  go to state 28
    statement      go to state 12
    if_stmt        go to state 13
    repeat_stmt    go to state 14
    assign_stmt    go to state 15
    read_stmt      go to state 16
    write_stmt     go to state 17
    var            go to state 18


State 8

   18 read_stmt: READ • var

    ID  shift, and go to state 5

    var  go to state 29


State 9

   19 write_stmt: WRITE • exp

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 30
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 10

    3 array_decls: array_decls array_decl •

    $default  reduce using rule 3 (array_decls)


State 11

    1 program: array_decls stmt_sequence •
    7 stmt_sequence: stmt_sequence • SEMI statement

    SEMI  shift, and go to state 31

    $default  reduce using rule 1 (program)


State 12

    8 stmt_sequence: statement •

    $default  reduce using rule 8 (stmt_sequence)


State 13

    9 statement: if_stmt •

    $default  reduce using rule 9 (statement)


State 14

   10 statement: repeat_stmt •

    $default  reduce using rule 10 (statement)


State 15

   11 statement: assign_stmt •

    $default  reduce using rule 11 (statement)


State 16

   12 statement: read_stmt •

    $default  reduce using rule 12 (statement)


State 17

   13 statement: write_stmt •

    $default  reduce using rule 13 (statement)


State 18

   17 assign_stmt: var • ASSIGN exp

    ASSIGN  shift, and go to state 32


State 19

    4 array_decl: ARRAY ID • dims SEMI

    LBRACKET  shift, and go to state 33

    dims  go to state 34


State 20

   31 var: ID var_dims •
   33 var_dims: var_dims • LBRACKET exp RBRACKET

    LBRACKET  shift, and go to state 35

    $default  reduce using rule 31 (var)


State 21

   29 factor: NUM •

    $default  reduce using rule 29 (factor)


State 22

   28 factor: LPAREN • exp RPAREN

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 36
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 23

   14 if_stmt: IF exp • THEN stmt_sequence END
   15        | IF exp • THEN stmt_sequence ELSE stmt_sequence END

    THEN  shift, and go to state 37


State 24

   20 exp: simple_exp • RELOP simple_exp
   21    | simple_exp •
   22 simple_exp: simple_exp • PLUS term
   23           | simple_exp • MINUS term

    RELOP  shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40

    $default  reduce using rule 21 (exp)


State 25

   24 simple_exp: term •
   25 term: term • TIMES factor
   26     | term • OVER factor

    TIMES  shift, and go to state 41
    OVER   shift, and go to state 42

    $default  reduce using rule 24 (simple_exp)


State 26

   27 term: factor •

    $default  reduce using rule 27 (term)


State 27

   30 factor: var •

    $default  reduce using rule 30 (factor)


State 28

    7 stmt_sequence: stmt_sequence • SEMI statement
   16 repeat_stmt: REPEAT stmt_sequence • UNTIL exp

    SEMI   shift, and go to state 31
    UNTIL  shift, and go to state 43


State 29

   18 read_stmt: READ var •

    $default  reduce using rule 18 (read_stmt)


State 30

   19 write_stmt: WRITE exp •

    $default  reduce using rule 19 (write_stmt)


State 31

    7 stmt_sequence: stmt_sequence SEMI • statement

    ID      shift, and go to state 5
    IF      shift, and go to state 6
    REPEAT  shift, and go to state 7
    READ    shift, and go to state 8
    WRITE   shift, and go to state 9

    statement    go to state 44
    if_stmt      go to state 13
    repeat_stmt  go to state 14
    assign_stmt  go to state 15
    read_stmt    go to state 16
    write_stmt   go to state 17
    var          go to state 18


State 32

   17 assign_stmt: var ASSIGN • exp

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 45
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 33

    6 dims: LBRACKET • NUM RBRACKET

    NUM  shift, and go to state 46


State 34

    4 array_decl: ARRAY ID dims • SEMI
    5 dims: dims • LBRACKET NUM RBRACKET

    SEMI      shift, and go to state 47
    LBRACKET  shift, and go to state 48


State 35

   33 var_dims: var_dims LBRACKET • exp RBRACKET

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 49
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 36

   28 factor: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 50


State 37

   14 if_stmt: IF exp THEN • stmt_sequence END
   15        | IF exp THEN • stmt_sequence ELSE stmt_sequence END

    ID      shift, and go to state 5
    IF      shift, and go to state 6
    REPEAT  shift, and go to state 7
    READ    shift, and go to state 8
    WRITE   shift, and go to state 9

    stmt_sequence  go to state 51
    statement      go to state 12
    if_stmt        go to state 13
    repeat_stmt    go to state 14
    assign_stmt    go to state 15
    read_stmt      go to state 16
    write_stmt     go to state 17
    var            go to state 18


State 38

   20 exp: simple_exp RELOP • simple_exp

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    simple_exp  go to state 52
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 39

   22 simple_exp: simple_exp PLUS • term

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    term    go to state 53
    factor  go to state 26
    var     go to state 27


State 40

   23 simple_exp: simple_exp MINUS • term

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    term    go to state 54
    factor  go to state 26
    var     go to state 27


State 41

   25 term: term TIMES • factor

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    factor  go to state 55
    var     go to state 27


State 42

   26 term: term OVER • factor

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    factor  go to state 56
    var     go to state 27


State 43

   16 repeat_stmt: REPEAT stmt_sequence UNTIL • exp

    ID      shift, and go to state 5
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 22

    exp         go to state 57
    simple_exp  go to state 24
    term        go to state 25
    factor      go to state 26
    var         go to state 27


State 44

    7 stmt_sequence: stmt_sequence SEMI statement •

    $default  reduce using rule 7 (stmt_sequence)


State 45

   17 assign_stmt: var ASSIGN exp •

    $default  reduce using rule 17 (assign_stmt)


State 46

    6 dims: LBRACKET NUM • RBRACKET

    RBRACKET  shift, and go to state 58


State 47

    4 array_decl: ARRAY ID dims SEMI •

    $default  reduce using rule 4 (array_decl)


State 48

    5 dims: dims LBRACKET • NUM RBRACKET

    NUM  shift, and go to state 59


State 49

   33 var_dims: var_dims LBRACKET exp • RBRACKET

    RBRACKET  shift, and go to state 60


State 50

   28 factor: LPAREN exp RPAREN •

    $default  reduce using rule 28 (factor)


State 51

    7 stmt_sequence: stmt_sequence • SEMI statement
   14 if_stmt: IF exp THEN stmt_sequence • END
   15        | IF exp THEN stmt_sequence • ELSE stmt_sequence END

    SEMI  shift, and go to state 31
    END   shift, and go to state 61
    ELSE  shift, and go to state 62


State 52

   20 exp: simple_exp RELOP simple_exp •
   22 simple_exp: simple_exp • PLUS term
   23           | simple_exp • MINUS term

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40

    $default  reduce using rule 20 (exp)


State 53

   22 simple_exp: simple_exp PLUS term •
   25 term: term • TIMES factor
   26     | term • OVER factor

    TIMES  shift, and go to state 41
    OVER   shift, and go to state 42

    $default  reduce using rule 22 (simple_exp)


State 54

   23 simple_exp: simple_exp MINUS term •
   25 term: term • TIMES factor
   26     | term • OVER factor

    TIMES  shift, and go to state 41
    OVER   shift, and go to state 42

    $default  reduce using rule 23 (simple_exp)


State 55

   25 term: term TIMES factor •

    $default  reduce using rule 25 (term)


State 56

   26 term: term OVER factor •

    $default  reduce using rule 26 (term)


State 57

   16 repeat_stmt: REPEAT stmt_sequence UNTIL exp •

    $default  reduce using rule 16 (repeat_stmt)


State 58

    6 dims: LBRACKET NUM RBRACKET •

    $default  reduce using rule 6 (dims)


State 59

    5 dims: dims LBRACKET NUM • RBRACKET

    RBRACKET  shift, and go to state 63


State 60

   33 var_dims: var_dims LBRACKET exp RBRACKET •

    $default  reduce using rule 33 (var_dims)


State 61

   14 if_stmt: IF exp THEN stmt_sequence END •

    $default  reduce using rule 14 (if_stmt)


State 62

   15 if_stmt: IF exp THEN stmt_sequence ELSE • stmt_sequence END

    ID      shift, and go to state 5
    IF      shift, and go to state 6
    REPEAT  shift, and go to state 7
    READ    shift, and go to state 8
    WRITE   shift, and go to state 9

    stmt_sequence  go to state 64
    statement      go to state 12
    if_stmt        go to state 13
    repeat_stmt    go to state 14
    assign_stmt    go to state 15
    read_stmt      go to state 16
    write_stmt     go to state 17
    var            go to state 18


State 63

    5 dims: dims LBRACKET NUM RBRACKET •

    $default  reduce using rule 5 (dims)


State 64

    7 stmt_sequence: stmt_sequence • SEMI statement
   15 if_stmt: IF exp THEN stmt_sequence ELSE stmt_sequence • END

    SEMI  shift, and go to state 31
    END   shift, and go to state 65


State 65

   15 if_stmt: IF exp THEN stmt_sequence ELSE stmt_sequence END •

    $default  reduce using rule 15 (if_stmt)
